Added the post counter and the associated Control Panel graph. Renamed the pre_render_panel_analytics hook to pre_render_panel_analytics_views. Added a details table to the route graphs. Moved the /topic/ and /reply/ routes to the router generator and hardened them. Made some of the route names more consistent. We now track IPs in odd situations in debug mode. Fixed a bug where people could post on non-existent profiles.
Continued work on topic move.
Added the postchunks table.

--- a/templates/create_topic.html
+++ b/templates/create_topic.html
@@ -4,7 +4,7 @@
 		<div class="rowitem"><h1>Create Topic</h1></div>
 	</div>
 	<div class="rowblock">
-		<form id="topic_create_form_form" enctype="multipart/form-data" action="/topic/create/submit/" method="post"></form>
+		<form id="topic_create_form_form" enctype="multipart/form-data" action="/topic/create/submit/?session={{.CurrentUser.Session}}" method="post"></form>
 		<div class="formrow real_first_child">
 			<div class="formitem formlabel"><a>Board</a></div>
 			<div class="formitem"><select form="topic_create_form_form" id="topic_board_input" name="topic-board">
