--- a/templates/topics.html
+++ b/templates/topics.html
@@ -38,9 +38,10 @@
 {{/** TODO: Have a seperate forum list for moving topics? Maybe an AJAX forum search compatible with plugin_guilds? **/}}
 {{/** TODO: Add ARIA attributes for this **/}}
 <div id="mod_topic_mover" class="modal_pane auto_hide">
-	<form action="/topic/move/submit/" method="post">
+	<form action="/topic/move/submit/?session={{.CurrentUser.Session}}" method="post">
+		<input id="mover_fid" name="fid" value="0" type="hidden" />
 		<div class="pane_header">
-			<h3>Move Topics (3)</h3>
+			<h3>Move these topics to?</h3>
 		</div>
 		<div class="pane_body">
 			<div class="pane_table">
@@ -53,7 +54,7 @@
 	</form>
 </div>
 <div class="rowblock topic_create_form quick_create_form" style="display: none;" aria-label="Quick Topic Form">
-	<form name="topic_create_form_form" id="topic_create_form_form" enctype="multipart/form-data" action="/topic/create/submit/" method="post"></form>
+	<form name="topic_create_form_form" id="topic_create_form_form" enctype="multipart/form-data" action="/topic/create/submit/?session={{.CurrentUser.Session}}" method="post"></form>
 	<img class="little_row_avatar" src="{{.CurrentUser.Avatar}}" height="64" alt="Your Avatar" title="Your Avatar" />
 	<div class="main_form">
 		<div class="topic_meta">
