You can now bulk move topics from one forum to another. We now track the User Agent for Cloudflare Always On.

--- a/templates/topics.html
+++ b/templates/topics.html
@@ -49,7 +49,7 @@
 			</div>
 		</div>
 		<div class="pane_buttons">
-			<button>Move Topics</button>
+			<button id="mover_submit">Move Topics</button>
 		</div>
 	</form>
 </div>
