--- a/themes/shadow/public/main.css
+++ b/themes/shadow/public/main.css
@@ -193,6 +193,8 @@ a {
 	-webkit-margin-after: 0;
 	margin-block-start: 0;
 	margin-block-end: 0;
+	margin-top: 0px;
+	margin-bottom: 0px;
 	display: inline;
 }
 .rowsmall {
