Added the global topic counter and associated graphs. Wildcards should work properly in robots.txt now Fixed the padding on the registration and login pages for Cosora. Moved the Websockets route into the new router. We now log more suspicious requests.
Started moving routes into /routes/
Added the topicchunks table.

--- a/templates/panel-inner-menu.html
+++ b/templates/panel-inner-menu.html
@@ -33,6 +33,9 @@
 			<a href="/panel/analytics/posts/">Posts</a>
 		</div>
 		<div class="rowitem passive submenu">
+			<a href="/panel/analytics/topics/">Topics</a>
+		</div>
+		<div class="rowitem passive submenu">
 			<a href="/panel/analytics/routes/">Routes</a>
 		</div>
 		<div class="rowitem passive submenu">
