--- a/templates/register.html
+++ b/templates/register.html
@@ -1,5 +1,5 @@
 {{template "header.html" . }}
-<main>
+<main id="register_page">
 	<div class="rowblock rowhead">
 		<div class="rowitem"><h1>Create Account</h1></div>
 	</div>
