--- a/templates/create_topic.html
+++ b/templates/create_topic.html
@@ -1,5 +1,5 @@
 {{template "header.html" . }}
-<main>
+<main id="create_topic_page">
 	<div class="rowblock rowhead">
 		<div class="rowitem"><h1>Create Topic</h1></div>
 	</div>
