--- a/templates/login.html
+++ b/templates/login.html
@@ -1,5 +1,5 @@
 {{template "header.html" . }}
-<main>
+<main id="login_page">
 	<div class="rowblock rowhead">
 		<div class="rowitem"><h1>Login</h1></div>
 	</div>
