--- a/templates/profile_comments_row.html
+++ b/templates/profile_comments_row.html
@@ -19,15 +19,14 @@
 {{else}}
 	{{range .ItemList}}
 		<div class="rowitem passive deletable_block editable_parent comment {{.ClassName}}">
-			<div class="userbit">
-				<img src="{{.Avatar}}" alt="{{.CreatedByName}}'s Avatar" title="{{.CreatedByName}}'s Avatar" />
-				<span class="nameAndTitle">
-					<a href="{{.UserLink}}" class="real_username username">{{.CreatedByName}}</a>
-					{{if .Tag}}<a class="username hide_on_mobile user_tag" style="float: right;">{{.Tag}}</a>{{end}}
-				</span>
-			</div>
-			<div class="content_column">
-				<span class="editable_block user_content">{{.ContentHtml}}</span>
+			<div class="topRow">
+				<div class="userbit">
+					<img src="{{.Avatar}}" alt="{{.CreatedByName}}'s Avatar" title="{{.CreatedByName}}'s Avatar" />
+					<span class="nameAndTitle">
+						<a href="{{.UserLink}}" class="real_username username">{{.CreatedByName}}</a>
+						{{if .Tag}}<a class="username hide_on_mobile user_tag" style="float: right;">{{.Tag}}</a>{{end}}
+					</span>
+				</div>
 				<span class="controls">
 					{{if $.CurrentUser.IsMod}}
 						<a href="/profile/reply/edit/submit/{{.ID}}?session={{$.CurrentUser.Session}}" class="mod_button" title="Edit Item"><button class="username edit_item edit_label"></button></a>
@@ -35,6 +34,9 @@
 					{{end}}
 					<a class="mod_button" href="/report/submit/{{.ID}}?session={{$.CurrentUser.Session}}&type=user-reply"><button class="username report_item flag_label"></button></a>
 				</span>
+			</div>
+			<div class="content_column">
+				<span class="editable_block user_content">{{.ContentHtml}}</span>
 			</div>
 		</div>
 	{{end}}
