--- a/themes/cosora/public/panel.css
+++ b/themes/cosora/public/panel.css
@@ -1,12 +1,20 @@
-#back {
-	padding-top: 0px;
-}
 #main {
+	max-width: inherit;
+	margin-left: 0px;
+	margin-right: 0px;
+	border-left: none;
+	border-right: none;
 	padding-left: 0px;
 }
+#back {
+	background-color: inherit;
+	padding-top: 0px;
+}
+
 .colstack_left {
 	background-color: hsl(0,0%,90%);
-	margin-top: -0.5px;
+	margin-top: -18.5px;
+	margin-left: -0.5px;
 	border-right: 1px solid var(--element-border-color);
 }
 .colstack_left .colstack_head {
@@ -31,7 +39,7 @@
 }
 .colstack_right {
 	margin-right: 14px;
-	margin-top: 14px;
+	margin-top: -4px;
 	margin-bottom: 14px;
 }
 .footer {
