Block requests without known hosts for security reasons. We now track stats for Uptimebot. We now track stats for malformed requests. Added json as a valid column type.
Continued work on poll posts.
Added the polls table.
Added the polls_voters table.
Added the poll column to the topics table.
Changed the type of the poll column on the replies table from boolean to int.

--- a/templates/forum.html
+++ b/templates/forum.html
@@ -55,9 +55,15 @@
 					<textarea form="topic_create_form_form" id="input_content" name="topic-content" placeholder="Insert post here" required></textarea>
 				</div>
 			</div>
+			<div class="formrow poll_content_row auto_hide">
+				<div class="formitem">
+					Poll stuff
+				</div>
+			</div>
 			<div class="formrow quick_button_row">
 				<div class="formitem">
 					<button form="topic_create_form_form" name="topic-button" class="formbutton">Create Topic</button>
+					<button form="topic_create_form_form" class="formbutton" id="add_poll_button">Add Poll</button>
 					{{if .CurrentUser.Perms.UploadFiles}}
 					<input name="upload_files" form="topic_create_form_form" id="upload_files" multiple type="file" style="display: none;" />
 					<label for="upload_files" class="formbutton add_file_button">Add File</label>
