--- a/templates/topics.html
+++ b/templates/topics.html
@@ -74,9 +74,19 @@
 				<textarea form="topic_create_form_form" id="input_content" name="topic-content" placeholder="Insert post here" required></textarea>
 			</div>
 		</div>
+		<div class="formrow poll_content_row auto_hide">
+			<div class="formitem">
+				<div class="pollinput">
+					<input type="checkbox" disabled />
+					<label class="pollinputlabel"></label>
+					<input type="text" placeholder="Add new poll option" />
+				</div>
+			</div>
+		</div>
 		<div class="formrow quick_button_row">
 			<div class="formitem">
 				<button form="topic_create_form_form" class="formbutton">Create Topic</button>
+				<button form="topic_create_form_form" class="formbutton" id="add_poll_button">Add Poll</button>
 				{{if .CurrentUser.Perms.UploadFiles}}
 				<input name="upload_files" form="topic_create_form_form" id="upload_files" multiple type="file" style="display: none;" />
 				<label for="upload_files" class="formbutton add_file_button">Add File</label>
