--- a/templates/topics.html
+++ b/templates/topics.html
@@ -128,11 +128,15 @@
 
 {{if gt .LastPage 1}}
 <div class="pageset">
-	{{if gt .Page 1}}<div class="pageitem"><a href="?page={{subtract .Page 1}}">Prev</a></div>{{end}}
+	{{if gt .Page 1}}
+	<link rel="prev" href="?page={{subtract .Page 1}}" />
+	<div class="pageitem"><a href="?page={{subtract .Page 1}}" rel="prev" aria-label="Go to the previous page">Prev</a></div>{{end}}
 	{{range .PageList}}
 	<div class="pageitem"><a href="?page={{.}}">{{.}}</a></div>
 	{{end}}
-	{{if ne .LastPage .Page}}<div class="pageitem"><a href="?page={{add .Page 1}}">Next</a></div>{{end}}
+	{{if ne .LastPage .Page}}
+	<link rel="next" href="?page={{add .Page 1}}" />
+	<div class="pageitem"><a href="?page={{add .Page 1}}" rel="next" aria-label="Go to the next page">Next</a></div>{{end}}
 </div>
 {{end}}
 
