--- a/templates/topic_alt.html
+++ b/templates/topic_alt.html
@@ -24,24 +24,33 @@
 
 <div class="rowblock post_container">
 	{{if .Poll.ID}}
-	<article class="rowitem passive deletable_block editable_parent post_item top_post">
+	<form id="poll_{{.Poll.ID}}_form" action="/poll/vote/{{.Poll.ID}}?session={{.CurrentUser.Session}}" method="post"></form>
+	<article class="rowitem passive deletable_block editable_parent post_item top_post hide_on_edit">
 		<div class="userinfo" aria-label="The information on the poster">
 			<div class="avatar_item" style="background-image: url({{.Topic.Avatar}}), url(/static/white-dot.jpg);background-position: 0px -10px;">&nbsp;</div>
 			<a href="{{.Topic.UserLink}}" class="the_name" rel="author">{{.Topic.CreatedByName}}</a>
 			{{if .Topic.Tag}}<div class="tag_block"><div class="tag_pre"></div><div class="post_tag">{{.Topic.Tag}}</div><div class="tag_post"></div></div>{{else}}<div class="tag_block"><div class="tag_pre"></div><div class="post_tag post_level">Level {{.Topic.Level}}</div><div class="tag_post"></div></div>{{end}}
 		</div>
-		<div class="content_container">
-			<div class="hide_on_edit topic_content user_content" itemprop="text">
+		<div id="poll_voter_{{.Poll.ID}}" class="content_container poll_voter">
+			<div class="topic_content user_content">
 				{{range .Poll.QuickOptions}}
 				<div class="poll_option">
-					<input id="poll_option_{{.ID}}" name="poll_option_input" type="checkbox" value="{{.ID}}" />
+					<input form="poll_{{$.Poll.ID}}_form" id="poll_option_{{.ID}}" name="poll_option_input" type="checkbox" value="{{.ID}}" />
 					<label class="poll_option_label" for="poll_option_{{.ID}}">
 						<div class="sel"></div>
 					</label>
 					<span class="poll_option_text">{{.Value}}</span>
 				</div>
 				{{end}}
+				<div class="poll_buttons">
+					<button form="poll_{{.Poll.ID}}_form" class="poll_vote_button">Vote</button>
+					<button class="poll_results_button">Results</button>
+					<a href="#"><button class="poll_cancel_button">Cancel</button></a>
+				</div>
 			</div>
+		</div>
+		<div id="poll_results_{{.Poll.ID}}" class="content_container poll_results auto_hide">
+			<div class="topic_content user_content"></div>
 		</div>
 	</article>
 	{{end}}
