--- a/templates/header.html
+++ b/templates/header.html
@@ -7,6 +7,7 @@
 		<link href="/static/{{.}}" rel="stylesheet" type="text/css">
 		{{end}}
 		<script type="text/javascript" src="/static/jquery-3.1.1.min.js"></script>
+		<script type="text/javascript" src="/static/chartist/chartist.min.js"></script>
 		{{range .Header.Scripts}}
 		<script type="text/javascript" src="/static/{{.}}"></script>
 		{{end}}
