--- a/templates/topic_alt.html
+++ b/templates/topic_alt.html
@@ -39,12 +39,12 @@
 					<label class="poll_option_label" for="poll_option_{{.ID}}">
 						<div class="sel"></div>
 					</label>
-					<span class="poll_option_text">{{.Value}}</span>
+					<span id="poll_option_text_{{.ID}}" class="poll_option_text">{{.Value}}</span>
 				</div>
 				{{end}}
 				<div class="poll_buttons">
 					<button form="poll_{{.Poll.ID}}_form" class="poll_vote_button">Vote</button>
-					<button class="poll_results_button">Results</button>
+					<button class="poll_results_button" data-poll-id="{{.Poll.ID}}">Results</button>
 					<a href="#"><button class="poll_cancel_button">Cancel</button></a>
 				</div>
 			</div>
